Fixes and addition of mixed operations
Optimized a bit the previous jacobi and gauss seidel
-> nothing really fancy just the basics

Added methods that handle mixed matrices
-> have to be tested and ppbly fixed for some of them

After this we will be able to add a bit of tests technically

Rename matrix->values to matrix-data
-> so Vector & Matrix have the same api

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,12 @@
 add_library(Source_Lib
-    Vector/vector.c
+    Vectors/vectors.c
 
-    Matrices/general.c    
+    Matrices/general.c 
     Matrices/csr.c
+    Matrices/inter_format.c
 
     Solvers/jacobi.c
+    Solvers/gauss_seidel.c
 
     Utils/chrono.c
 )
@@ -14,7 +16,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
 target_include_directories(Source_Lib
     PUBLIC
     ${CMAKE_SOURCE_DIR}/include/Matrices
-    ${CMAKE_SOURCE_DIR}/include/Vector
+    ${CMAKE_SOURCE_DIR}/include/Vectors
     ${CMAKE_SOURCE_DIR}/include/Solvers
     ${CMAKE_SOURCE_DIR}/include/Utils
 )
