Started working on CSC a bit print function is not correct the fill function is the same as csr because it s a square matrix anyway

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(Source_Lib
 
     Matrices/general.c 
     Matrices/csr.c
+    Matrices/csc.c
     Matrices/inter_format.c
 
     Solvers/jacobi.c
