Addition of Conjugate Gradient -> It has not been tested and it doesnt quite compute correctly at the moment -> Will be fixed soon

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(Source_Lib
 
     Solvers/jacobi.c
     Solvers/gauss_seidel.c
+    Solvers/conjugate_gradient.c
 
     Utils/chrono.c
 )
