Added GMRES on general format
GMRES with the general format know works
need to fix a few things :
    -> Add proper Linear Algebra Primitive (so it's easier to write
    stuff)

    -> Write a jagged array class/vector of vectors for the hessenberg
    matrix

    -> Re write gmres, jacobi etc a bit more properly

    -> Add a MTX format reader

    -> Add MPI Dispatching

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library(Source_Lib
     Algorithms/Solvers/jacobi.c
     Algorithms/Solvers/gauss_seidel.c
     Algorithms/Solvers/conjugate_gradient.c
-    #Solvers/GMRES.c
+    Algorithms/Solvers/GMRES.c
 
     Utils/chrono.c
 )
