--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,12 +13,18 @@ add_library(Source_Lib
     Algorithms/Solvers/conjugate_gradient.c
     Algorithms/Solvers/GMRES.c
 
+    Algorithms/Linear_Algebra/dgemv.c
+
     Utils/chrono.c
 )
 
 target_link_libraries(Source_Lib
     PUBLIC
     m
+    mvec
+    LAPACK::LAPACK
+    BLAS::BLAS
+    lapacke
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
@@ -28,7 +34,10 @@ target_include_directories(Source_Lib
     ${CMAKE_SOURCE_DIR}/include/Vectors
     ${CMAKE_SOURCE_DIR}/include/Matrices
     ${CMAKE_SOURCE_DIR}/include/Fillers
+
+    # Algorithms subfolder, a bit ugly
     ${CMAKE_SOURCE_DIR}/include/Algorithms
     ${CMAKE_SOURCE_DIR}/include/Algorithms/Solvers
+    ${CMAKE_SOURCE_DIR}/include/Algorithms/Linear_Algebra
     ${CMAKE_SOURCE_DIR}/include/Utils
 )
