Fix memory leaks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ find_package(LAPACKE REQUIRED)
 
 if(C_COMPILER STREQUAL "gcc")
     set(CMAKE_C_COMPILER "gcc")
-    set(CMAKE_C_FLAGS_RELEASE "-O3 -march=native")
-    set(CMAKE_C_FLAGS_DEBUG "-O0 -g3 -Wall -Wextra")
+    set(CMAKE_C_FLAGS_RELEASE "-O3 -g -march=native")
+    set(CMAKE_C_FLAGS_DEBUG "-O0 -g3 -Wall -Wextra -Wconversions -Wpedantic")
     set(CMAKE_C_LINK_FLAGS_RELEASE "-flto")
     set(CMAKE_C_LINK_FLAGS_DEBUG "")
 else()
