--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,25 @@
 add_library(Source_Lib
     Vectors/vectors.c
+    MPI/vector_MPI.c
 
     Matrices/general.c 
     Matrices/csr.c
     Matrices/csc.c
-    #Matrices/inter_format.c
+    
+    Matrices/coo.c
+    MPI/coo_MPI.c
+    Matrices/inter_format.c
     
     Fillers/poisson_laplacian_2D.c
+    Fillers/matrix_market_loader.c
 
     Algorithms/Solvers/jacobi.c
     Algorithms/Solvers/gauss_seidel.c
     Algorithms/Solvers/conjugate_gradient.c
     Algorithms/Solvers/GMRES.c
-
+    
     Algorithms/Linear_Algebra/dgemv.c
+    MPI/spmv_MPI.c
 
     Utils/chrono.c
 )
@@ -25,6 +31,7 @@ target_link_libraries(Source_Lib
     LAPACK::LAPACK
     BLAS::BLAS
     lapacke
+    MPI::MPI_C
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
@@ -34,7 +41,7 @@ target_include_directories(Source_Lib
     ${CMAKE_SOURCE_DIR}/include/Vectors
     ${CMAKE_SOURCE_DIR}/include/Matrices
     ${CMAKE_SOURCE_DIR}/include/Fillers
-
+    ${CMAKE_SOURCE_DIR}/include/MPI
     # Algorithms subfolder, a bit ugly
     ${CMAKE_SOURCE_DIR}/include/Algorithms
     ${CMAKE_SOURCE_DIR}/include/Algorithms/Solvers
